# nonebot-plugin-template

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: afdian-sync.yml  pypi-publish.yml  release.yml  testrelease.yml
nonebot_plugin_example/: __init__.py
